--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,18 @@
   "homepage": "https://github.com/CHMEH80/KwasiNyagbe_6_080321#readme",
   "devDependencies": {
     "eslint": "^7.21.0"
+  },
+  "dependencies": {
+    "app-root-path": "^3.0.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.0",
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
+    "path": "^0.12.7",
+    "winston": "^3.3.3"
   }
 }
