--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,13 @@
     "eslint": "^7.21.0"
   },
   "dependencies": {
-   "app-root-path": "^3.0.0",
+    "app-root-path": "^3.0.0",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "ddos": "^0.2.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
     "mongoose-unique-validator": "^2.0.3",
