--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "KwasiNyagbe_6_080321",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "launch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
     "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "path": "^0.12.7",
     "winston": "^3.3.3"
